--- a/marketplace/templates/marketplace/marketplace_detail.html
+++ b/marketplace/templates/marketplace/marketplace_detail.html
@@ -134,9 +134,36 @@
                         <p>Joined PNP Social since {{product.author.date_joined|naturaltime}}</p>
                     </div>
                     <hr>
-                    <a href="{% url 'marketplace:marketplace-home' %}" class="btn mb-1 mr-1 btn-outline-danger">Back to marketplace <span class="btn-icon-right"><i class="fas fa-sign-out-alt"></i></span></a>
+                    <a href="{% url 'marketplace:marketplace-home' %}" class="btn mb-1 mr-1 btn-outline-dark">Back to marketplace <span class="btn-icon-right"><i class="fas fa-sign-out-alt"></i></span></a>
+                    {% if product.author == request.user %}
+                    <a href="{% url 'marketplace:marketplace-edit' product.pk %}" class="btn mb-1 mr-1 btn-outline-warning">Edit <span class="btn-icon-right"><i class="far fa-edit"></i></span></a>
+                    <button type="button" class="btn mb-1 btn-outline-danger" data-toggle="modal" data-target="#deleteModal">Delete <span class="btn-icon-right"><i class="fas fa-trash-alt"></i></span></button>
+                    {% endif %}
                     <button type="button" class="btn mb-1 btn-outline-primary">Sent message <span class="btn-icon-right"><i class="fa fa-envelope"></i></span></button>
+
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Modal -->
+<div class="modal fade" id="deleteModal">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Delete this product from marketplace ?</h5>
+                <button type="button" class="close" data-dismiss="modal"><span>&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>This action can't be undone</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <form method="POST" action="{% url 'marketplace:marketplace-delete' product.pk %}">
+                   {% csrf_token %}
+                   <button type="submit" value="DELETE" class="btn btn-danger">Delete</button>
+                </form>
             </div>
         </div>
     </div>
