--- a/templates/snippets/footer.html
+++ b/templates/snippets/footer.html
@@ -1,12 +1,5 @@
-<style type="text/css">
-	.footer{
-		min-height: 100px;
-	}
-</style>
-
-<!-- Footer -->
-
-<div class="d-flex flex-row align-items-center footer bg-white shadow-lg mt-4">
-	<p class="m-auto">Copyright &copy; 2021, Andi Fathul Mukminin</p>
+<div class="footer">
+    <div class="copyright">
+        <p>Copyright &copy;</p>
+    </div>
 </div>
-<!-- End Footer -->
