--- a/templates/snippets/header.html
+++ b/templates/snippets/header.html
@@ -1,268 +1,119 @@
 {% load static %}
 
-<style type="text/css">
-	.chat-dropdown-header:hover{
-		cursor: pointer;
-		background: var(--main-background-color);
-	}
-	.chat-dropdown-header{
-		color: var(--light-primary-text-color);
-	}
-	.scrollable-menu {
-		height: auto;
-		max-height: 90vh;
-		width: 500px;
-		overflow-x: hidden;
-	}
-	.notifications-icon-container:hover{
-		cursor: pointer;
-	}
-	.notifications-material-icon {
-		font-size: 28px;
+{% block head %}
+<style>
+    .chat-dropdown-header:hover{
+        cursor: pointer;
+        background: var(--main-background-color);
+    }
+    .chat-dropdown-header{
+        color: var(--light-primary-text-color);
+    }
+    .scrollable-menu {
+        height: auto;
+        max-height: 90vh;
+        width: 500px;
+        overflow-x: hidden;
+    }
 
-	}
-	.notifications-icon-container{
-		width: 40px;
-		height: 40px;
-		background-color: #c2c3c4;
-	}
-	.notifications-icon-container:hover {
-		cursor: pointer;
-		background-color: #343a40;
-	}
-	.notify-badge{
-		position: absolute;
-		background: transparent;
-		height:1.2rem;
-		width:1.2rem;
-		line-height: 1.2rem;
-		top:1rem;
-		right:2rem;
-		text-align: center;
-		font-size: 1rem;
-		border-radius: 50%;
-		color:white;
-		font-weight: 630;
-		margin-top:-15px;
-		margin-right: -25px;
-	}
-	#id_notifications_spinner{
-		margin-top: 20px;
-		margin-bottom: 20px;
-	}
+    .notifications-material-icon {
+        font-size: 28px;
+
+    }
+    .notifications-icon-container{
+        width: 40px;
+        height: 40px;
+        background-color: var(--main-background-color);
+    }
+    .notifications-icon-container:hover {
+        cursor: pointer;
+        background-color: var(--secondary-text-color)
+    }
+    .notify-badge{
+        position: absolute;
+        background: transparent;
+        height:1.2rem;
+        width:1.2rem;
+        line-height: 1.2rem;
+        top:1rem;
+        right:2rem;
+        text-align: center;
+        font-size: 1rem;
+        border-radius: 50%;
+        color:white;
+        font-weight: 630;
+        margin-top:-15px;
+        margin-right: -25px;
+    }
+    #id_notifications_spinner{
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
 </style>
-
-<!-- Header -->
-<div class="d-flex flex-column flex-lg-row p-3 px-md-4 shadow-sm bg-light">
-
-	<!-- MEDIUM+ SCREENS -->
-	<div class="d-none d-md-flex flex-row my-auto flex-grow-1 align-items-center" >
-		<button type="button" id="sidebarCollapse" class="btn btn-primary">
-	          <i class="fa fa-bars"></i>
-	          <span class="sr-only">Toggle Menu</span>
-	    </button><br>
-		<h5 class="mr-3 ml-3 font-weight-normal justify-content-start">
-			<a class="p-2 text-dark lead" style="font-weight: 600;" href="{% url 'home' %}">Home</a>
-		</h5>
-		<form class="search-bar justify-content-start" onsubmit="return executeQuery();">
-			<input type="text" class="form-control" name="q" id="id_q_large" placeholder="Search...">
-		</form>
-
-		<div class="d-flex flex-row-reverse flex-grow-1">
-			<nav class="">
-				{% if request.user.is_authenticated %}
-					<div class="dropdown dropleft show p-2">
-						<div class="d-flex flex-row">
-
-							<div class="btn-group dropleft">
-								<div class="d-flex notifications-icon-container rounded-circle align-items-center mr-3" id="id_notification_dropdown_toggle" data-toggle="dropdown">
-									<!--
-										<span id="id_general_notifications_count" class="notify-badge"></span>
-									-->
-									<span class="d-flex material-icons notifications-material-icon m-auto align-items-center">groups</span>
-
-									<div class="dropdown-menu scrollable-menu" aria-labelledby="id_notification_dropdown_toggle_group" id="id_group_notifications_container">										
-									</div>
-								</div>
-							</div>
-
-							<div class="btn-group dropleft">
-								<div class="d-flex notifications-icon-container rounded-circle align-items-center mr-3" id="id_chat_notification_dropdown_toggle" data-toggle="dropdown">
-									<span id="id_chat_notifications_count" class="notify-badge"></span>
-									<span class="d-flex material-icons notifications-material-icon m-auto align-items-center">chat_bubble_outline</span>
-									 
-									<div class="dropdown-menu" aria-labelledby="id_profile_links">
-										<a class="dropdown-item" href="#" onclick="chatRedirect({% url 'public_chat:public_chat_room' %})">Public Chat</a>
-										<a class="dropdown-item" href="#" onclick="chatRedirect({% url 'chat:private-chat-room' %})">Private Chat</a>
-									</div>
-								</div>
-							</div>
-
-							<div class="btn-group dropleft">
-								<div class="d-flex notifications-icon-container rounded-circle align-items-center mr-3" id="id_notification_dropdown_toggle" data-toggle="dropdown" onclick="setGeneralNotificationsAsRead()">
-									<span id="id_general_notifications_count" class="notify-badge"></span>
-									<span class="d-flex material-icons notifications-material-icon m-auto align-items-center">notifications_none</span>
-									<div class="dropdown-menu scrollable-menu" aria-labelledby="id_notification_dropdown_toggle" id="id_general_notifications_container">										
-									</div>
-								</div>
-							</div>
-
-							<div class="btn-group dropleft">
-								<img class="account-image rounded-circle m-auto d-block dropdown-toggle" id="id_profile_links" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="{{request.user.profile_image.url}}" alt="logo" width="40" height="40">
-								<div class="dropdown-menu" aria-labelledby="id_profile_links">
-									<a class="dropdown-item" href="{% url 'account:view' user_id=request.user.id %}">Account</a>
-									<a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
-								</div>
-							</div>
-						</div>
-						
-					</div>
-				{% else %}
-					<a class="btn btn-outline-success" href="{% url 'login' %}">Login</a>
-					<a class="btn btn-outline-primary" href="{% url 'register' %}">Register</a>
-				{% endif %}	
-			</nav>
-		</div>
-	</div>
-	<!-- END MEDIUM+ SCREENS -->
-
-	<!-- SMALL SCREENS -->
-	<div class="d-flex d-md-none flex-column my-auto align-items-center">
-		<h5 class="font-weight-normal">
-		<a class="p-2 text-dark" href="{% url 'home' %}">Home</a>
-		</h5>
-		<form class="search-bar justify-content-start" onsubmit="return executeQuery();">
-			<input type="text" class="form-control" name="q" id="id_q_small" placeholder="Search...">
-		</form>
-		<div class="d-flex flex-row-reverse flex-grow-1">
-			<nav class="">
-				{% if request.user.is_authenticated %}
-				<div class="dropdown dropleft p-2 mt-2">
-					<div class="d-flex flex-row">
-						<div class="btn-group dropleft">
-							<img class="account-image rounded-circle m-auto d-block dropdown-toggle" id="id_profile_links" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="{{request.user.profile_image.url}}" alt="logo" width="40" height="40">
-							<div class="dropdown-menu" aria-labelledby="id_profile_links">
-								<a class="dropdown-item" href="{% url 'account:view' user_id=request.user.id %}">Account</a>
-								<!--<a class="dropdown-item" href="{% url 'logout' %}">Logout</a>-->
-							</div>
-						</div>
-					</div>
-				</div>
-				{% else %}
-					<a class="btn btn-outline-success" href="{% url 'login' %}">Login</a>
-					<a class="btn btn-outline-primary m-2" href="{% url 'register' %}">Register</a>
-				{% endif %}	
-			</nav>
-	  	</div>
-	</div>
-	<!-- END SMALL SCREENS -->
+{% endblock head %}
+<div class="header">    
+    <div class="header-content clearfix">
+        
+        <div class="nav-control">
+            <div class="hamburger">
+                <span class="toggle-icon"><i class="icon-menu"></i></span>
+            </div>
+        </div>
+        <div class="header-left">
+            <div class="input-group icons">
+                <div class="input-group-prepend">
+                    <span class="input-group-text bg-transparent border-0 pr-2 pr-sm-3" id="basic-addon1"><i class="mdi mdi-magnify"></i></span>
+                </div>
+                <form class="search-bar justify-content-start" onsubmit="return executeQuery();">
+                    <input type="text" class="form-control" name="q" id="id_q_large" placeholder="Search..." aria-label="Search Dashboard">
+                </form>
+                <div class="drop-down   d-md-none">
+					<form action="#">
+						<input type="text" class="form-control" placeholder="Search">
+					</form>
+                </div>
+            </div>
+        </div>
+        <div class="header-right">
+            <ul class="clearfix">
+                <li class="icons dropdown">
+                    <div class="d-flex notifications-icon-container rounded-circle align-items-center mr-3" id="id_chat_notification_dropdown_toggle" data-toggle="dropdown">
+                        <span id="id_chat_notifications_count" class="notify-badge"></span>
+                        <span class="d-flex material-icons notifications-material-icon m-auto align-items-center">chat</span>
+                         
+                        <div class="dropdown-menu scrollable-menu" aria-labelledby="id_chat_notification_dropdown_toggle" id="id_chat_notifications_container">
+                        </div>
+                    </div>
+                </li>
+                <li class="icons dropdown">
+                    <div class="d-flex notifications-icon-container rounded-circle align-items-center mr-3" id="id_notification_dropdown_toggle" data-toggle="dropdown" onclick="setGeneralNotificationsAsRead()">
+                        <span id="id_general_notifications_count" class="badge badge-pill gradient-2 badge-primary"></span>
+                        <span class="d-flex material-icons notifications-material-icon m-auto align-items-center">notifications_none</span>
+                        <div class="dropdown-menu scrollable-menu" aria-labelledby="id_notification_dropdown_toggle" id="id_general_notifications_container" style="min-width: 23rem; max-height: 500px; overflow-y: auto;">                                       
+                        </div>
+                    </div>
+                </li>
+                <li class="icons dropdown">
+                    <div class="user-img c-pointer position-relative"   data-toggle="dropdown">
+                        <span class="activity active"></span>
+                        <img src="{{request.user.profile_image.url}}" height="40" width="40" alt="">
+                    </div>
+                    <div class="drop-down dropdown-profile   dropdown-menu">
+                        <div class="dropdown-content-body">
+                            <ul>
+                                <li>
+                                    <a href="{% url 'account:view' user_id=request.user.id %}" ><i class="icon-user"></i> <span>Profile</span></a>
+                                </li>
+                                <li>
+                                    <!-- BIG WARNING, EDIT IN PRODUCTION -->
+                                    <a href="http://127.0.0.1:8000/lock/?next={{request.path}}"><i class="icon-lock"></i> <span>Lock Screen</span></a>
+                                </li>
+                                <li><a href="{% url 'logout' %}"><i class="icon-key"></i> <span>Logout</span></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>
 </div>
-
-{% include 'snippets/general_notifications.html' %}
-{% include 'snippets/chat_notifications.html' %}
-
-<!-- Setup SOCKET for NOTIFICATIONS -->
-<script type="text/javascript">
-	// Correctly decide between ws:// and wss://
-	var ws_scheme = window.location.protocol == "https:" ? "wss" : "ws";
-	// var ws_path = ws_scheme + '://' + window.location.host + ":8001/"; // PRODUCTION
-	var ws_path = ws_scheme + '://' + window.location.host + "/";
-	// console.log("Connecting to " + ws_path);
-	var notificationSocket = new WebSocket(ws_path);
-
-	// Handle incoming messages
-	notificationSocket.onmessage = function(message) {
-		var data = JSON.parse(message.data);
-		console.log("Got notification websocket message. " + data.general_msg_type);
-
-		/*
-			GENERAL NOTIFICATIONS
-		*/
-		// new 'general' notifications data payload
-		if(data.general_msg_type == 0){
-			handleGeneralNotificationsData(data['notifications'], data['new_page_number'])
-		}
-
-		// "General" Pagination exhausted. No more results.
-		if(data.general_msg_type == 1){
-			setGeneralPaginationExhausted()
-		}
-
-		// Refresh [newest_timestamp >= NOTIFICATIONS >= oldest_timestamp]
-		if(data.general_msg_type == 2){
-			refreshGeneralNotificationsData(data['notifications'])
-		}
-
-		if(data.general_msg_type == 3){
-			handleNewGeneralNotificationsData(data['notifications'])
-		}
-
-		if(data.general_msg_type == 4){
-			setUnreadGeneralNotificationsCount(data['count'])
-		}
-
-		if(data.general_msg_type == 5){
-			updateGeneralNotificationDiv(data['notification'])
-		}
-
-	}
-
-	notificationSocket.onclose = function(e) {
-		console.error('Notification Socket closed unexpectedly');
-	};
-
-	notificationSocket.onopen = function(e){
-		console.log("Notification Socket on open: " + e)
-		setupGeneralNotificationsMenu()
-		getFirstGeneralNotificationsPage()
-		getUnreadGeneralNotificationsCount()
-	}
-
-	notificationSocket.onerror = function(e){
-		console.log('Notification Socket error', e)
-	}
-
-	if (notificationSocket.readyState == WebSocket.OPEN) {
-		console.log("Notification Socket OPEN complete.")
-	} 
-	else if (notificationSocket.readyState == WebSocket.CONNECTING){
-		console.log("Notification Socket connecting..")
-	}
-</script>
-
-<script type="text/javascript">
-	//setupChatDropdownHeader() remember this!!
-	function executeQuery() {
-		var query = ""
-		query = document.getElementById('id_q_small').value;
-		if (query == ""){
-			query = document.getElementById('id_q_large').value;
-		}
-	    window.location.replace("{% url 'search' %}?q=" + query)
-	    return false
-	}
-
-</script>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
