--- a/templates/snippets/preloader.html
+++ b/templates/snippets/preloader.html
@@ -11,7 +11,7 @@
       height:20px;
       margin: 5px;
       border-radius:50%;
-      background-color:#4B6587;
+      background-color:#0654ba;
       position:absolute;
       animation:move 2.5s cubic-bezier(.15,.56,.74,.35) infinite;
     }
@@ -49,7 +49,7 @@
 {% endblock head %}
 
 <div id="preloader">
-    <div class="loader" style="width: 100% !important;">
+    <div class="loader htmx-indicator" style="width: 100% !important;">
         <div class="spans">
           <span></span>
           <span></span>
