--- a/post/templates/post/post_list.html
+++ b/post/templates/post/post_list.html
@@ -1,13 +1,24 @@
 {% extends 'personal/home.html' %}
 {% load crispy_forms_tags %}
-{% block post %}
+{% load humanize %}
+{% load static %}
+
+{% block head %}
+
+<link rel="stylesheet" href="https://unicons.iconscout.com/release/v3.0.6/css/line.css">
 <style>
     .post-image {
-        max-width: 100%;
+        display: block;
+        max-width:430px;
+        max-height:135px;
+        width: auto;
         height: auto;
         border-radius: 10px;
         margin-bottom: 10px;
+        cursor: pointer;
+        transition: 0.3s;
     }
+    .post-image:hover {opacity: 0.7;}
     .share-btn {
         cursor: pointer;
     }
@@ -19,106 +30,212 @@
     .body-post a {
         text-decoration: none;
     }
+
+    body {
+      font-family: 'Roboto', sans-serif;
+    }
+    img {
+      max-width:100%;
+    }
+    .avator {
+      border-radius:100px;
+      width:48px;
+      margin-right: 15px;
+    }
+
+
+    .tweet-wrap {
+      background: #fff;
+      border-radius:3px;
+      padding: 30px;
+      border-bottom: 1px solid #e6ecf0;
+      border-top: 1px solid #e6ecf0;
+    }
+
+    .tweet-header {
+      display: flex;
+      align-items:flex-start;
+      font-size:20px;
+    }
+    .tweet-header-info {
+      font-weight:bold;
+    }
+    .tweet-header-info span {
+      color:#657786;
+      font-weight:normal;
+      margin-left: 5px;
+    }
+    .tweet-header-info p {
+      font-weight:normal;
+      margin-top: 5px;
+      
+    }
+    .tweet-img-wrap {
+      padding-left: 5px;
+    }
+
+    .tweet-info-counts {
+      display: flex;
+      margin-left: 60px;
+      margin-top: 10px;
+    }
+    .tweet-info-counts div {
+      display: flex;
+      margin-right: 20px;
+    }
+    .tweet-info-counts div svg {
+      color:#657786;
+      margin-right: 10px;
+    }
+    @media screen and (max-width:430px){
+      body {
+        padding-left: 20px;
+        padding-right: 20px;
+      }
+      .tweet-header {
+        flex-direction:column;
+      }
+      .tweet-header img {
+        margin-bottom: 20px;
+      }
+      .tweet-header-info p {
+        margin-bottom: 30px;
+      }
+      .tweet-img-wrap {
+        padding-left: 0;
+      }
+      .tweet-info-counts {
+      display: flex;
+      margin-left: 0;
+    }
+    .tweet-info-counts div {
+      margin-right: 10px;
+    }
+    }
+    .heart {
+        height: 29px;
+        width: 29px;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: grey;
+    }
+
+    .heart-clicked {
+        height: 29px;
+        width: 29px;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: coral;
+    }
+
+    /* Image Viewer */
+    /* The Modal (background) */
+    #image-viewer {
+        display: none;
+        position: fixed;
+        z-index: 1;
+        padding-top: 100px;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: rgb(0,0,0);
+        background-color: rgba(0,0,0,0.9);
+    }
+    .modal-content {
+        margin: auto;
+        display: block;
+        width: 80%;
+        max-width: 700px;
+    }
+    .modal-content { 
+        animation-name: zoom;
+        animation-duration: 0.6s;
+    }
+    @keyframes zoom {
+        from {transform:scale(0)} 
+        to {transform:scale(1)}
+    }
+    #image-viewer .close {
+        position: absolute;
+        top: 15px;
+        right: 35px;
+        color: #f1f1f1;
+        font-size: 40px;
+        font-weight: bold;
+        transition: 0.3s;
+    }
+    #image-viewer .close:hover,
+    #image-viewer .close:focus {
+        color: #bbb;
+        text-decoration: none;
+        cursor: pointer;
+    }
+
+    @media only screen and (max-width: 700px){
+        .modal-content {
+            width: 100%;
+        }
+    }
 </style>
-<div class="row justify-content-center mt-3">
-    <div class="col-md-5 col-sm-12 border-bottom">
-        <h5>Add a Post!</h5>
-    </div>
-</div>
+{% endblock head %}
 
-<div class="row justify-content-center mt-3 mb-5">
-    <div class="col-md-5 col-sm-12">
-        <form method="POST" enctype="multipart/form-data">
-            {% csrf_token %}
-            {{ form | crispy }}
-            <div class="d-grid gap-2">
-                <button class="btn btn-success mt-3">Submit!</button>
-            </div>
-        </form>
-    </div>
-</div>
-{% for post in post_list %}
-<div class="row justify-content-center mt-3">
-    <div class="col-md-5 col-sm-12 border-bottom position-relative">
-        {% if post.shared_user %} <!-- FROM THIS-->
-        <div>
-            <a href="{% url 'account:view' user_id=post.shared_user.profile.pk %}">
-                <img class="round-circle post-img" style="float: left;margin-right: 1rem;" height="30" width="30" src="{{ post.shared_user.profile_image.url }}" />
-            </a>
-            <p class="post-text">
-                <a class="text-primary post-link" href="{% url 'account:view' user_id=post.shared_user.profile.pk %}">@{{ post.shared_user }}</a> shared a post on {{ post.shared_on }}
-            </p>
-        </div>
-        {% else %}
-        <div>
-            <a href="{% url 'account:view' user_id=post.author.profile.pk %}">
-                <img class="round-circle post-img" style="float: left;margin-right: 1rem;" height="30" width="30" src="{{ post.author.profile_image.url }}" />
-            </a>
-            <p class="post-text">
-                <a class="text-primary post-link" href="{% url 'account:view' user_id=post.author.profile.pk %}">@{{ post.author }}</a> {{ post.created_on }}
-                <span onclick="shareToggle('{{ post.pk }}')"><i class="far fa-share-square share-btn"></i></span>
-            </p>
-        </div>
-        {% endif %}
-        <form method="POST" action="{% url 'post:share-post' post.pk %}" class="d-none" id="{{ post.pk }}">
-            {% csrf_token %}
-            {{ shareform | crispy }}
-            <div class="d-grid gap-2">
-                <button class="btn btn-success mt-3">share the post</button>
-            </div>
-        </form>
-        {% if post.shared_body %}
-        <div class="position-relative border-bottom mb-3 body-post"> 
-            <p>{{ post.shared_body }}</p>
-        </div>  <!-- UNTIL THIS-->
-        <div class="shared-post"> <!--THIS-->
-            <a href="{% url 'account:view' user_id=post.author.profile.pk %}">
-                <img class="round-circle " style="float: left;margin-right: 1rem;" height="30" width="30" src="{{ post.author.profile_image.url }}" />
-            </a>
-            <p style="padding-top: 0.5rem;">
-                <a class="text-primary" style="text-decoration: none;" href="{% url 'account:view' user_id=post.author.profile.pk %}">@{{ post.author }}</a> {{ post.created_on }}
-            </p>
-        </div>
-        {% endif %} <!--THIS-->
-        <div class="shared-post position-relative pt-3"><!--THIS-->
-            {% if post.image.count > 0 %}
-              <div class="row">
-                {% for img in post.image.all %}
-                    <div class="col-md-4 col-xs-12">
-                        <img src="{{ img.image.url }}" class="post-image" />
-                    </div>
-                {% endfor %}
-              </div>
-            {% endif %}
-            <div class="body-post">
-                <p>{{ post.body }}</p>
-            </div>
-            <a href="{% url 'post:post-detail' post.pk %}" class="stretched-link"></a>
-        </div>
-        <div class="d-flex flex-row">
-            <form method="POST" action="{% url 'post:post-like' post.pk %}">
-                {% csrf_token %}
-                <input type="hidden" name="next" value="{{ request.path }}">
-                <button style="background-color: transparent; border: none; box-shadow: none;" type="submit">
-                    <i class="far fa-thumbs-up"> <span>{{ post.likes.all.count }}</span></i>
-                </button>
-            </form>
+{% block post %}
+  {% include 'post/snippets/post_list_tweet_box.html' %}
 
-            <form method="POST" action="{% url 'post:post-dislike' post.pk %}">
-                {% csrf_token %}
-                <input type="hidden" name="next" value="{{ request.path }}">
-                <button style="background-color: transparent; border: none; box-shadow: none;" type="submit">
-                    <i class="far fa-thumbs-down"> <span>{{ post.dislikes.all.count }}</span></i>
-                </button>
-            </form>
-        </div>
+  <div class="infinite-container">
+
+    <div id="post-content">
+      {% include 'post/snippets/post_list_body.html' %}
     </div>
-</div>
-{% endfor %}
+
+    <div class="d-flex d-none position-fixed" style="top:35vh;left:46vw;">
+        <button class="btn btn-primary loading" style="display: none;">
+            <span class="spinner-border spinner-border-sm"></span>
+            Loading tweet...
+        </button>
+    </div>
+
+    {% if post_list.has_next %}
+        <a class="infinite-more-link" href="?page={{ post_list.next_page_number }}"></a>
+    {% endif %}
+
+  </div>
+  <div id="image-viewer">
+    <span class="close">&times;</span>
+    <img class="modal-content" id="full-image">
+  </div>
+
+{% endblock post %}
+
+{%  block javascript %}
+<!-- Waypoints -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+<script src="{% static 'quixlab/js/jquery.waypoints.js' %}"></script>
+<script src="{% static 'quixlab/js/infinite.min.js' %}"></script>
+
 <script>
+    var infinite = new Waypoint.Infinite({
+        element: $('.infinite-container')[0],
+        offset: 'bottom-in-view',
+        onBeforePageLoad: function(){
+            $('.loading').show();
+        },
+        onAfterPageLoad: function(){
+            $('.loading').hide();
+            formatTags();
+        }
+    })
+
     function shareToggle(parent_id) {
         const row = document.getElementById(parent_id);
-
+        console.log(parent_id)
+        console.log(row)
         if (row.classList.contains('d-none')) {
             row.classList.remove('d-none');
         } else {
@@ -128,4 +245,132 @@
 
 </script>
 
-{% endblock post %}
+<script>
+    function getCookie(name) {
+        let cookieValue = null;
+        if (document.cookie && document.cookie !== '') {
+            const cookies = document.cookie.split(';');
+            for (let i = 0; i < cookies.length; i++) {
+                const cookie = cookies[i].trim();
+                // Does this cookie string begin with the name we want?
+                if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                    break;
+                }
+            }
+        }
+        return cookieValue;
+    }
+    const csrftoken = getCookie('csrftoken');
+
+    function sentAJAX_like(pk){
+        var id = "like-button-"+pk
+        var id_count = "likes-count-"+pk
+        var like = document.getElementById(id)
+        var count = document.getElementById(id_count)
+        var like_count = Number(count.innerText)
+        if(like.classList.contains('heart')){
+            like.classList.remove('heart');
+            like.classList.add('heart-clicked');
+            count.innerText = like_count + 1
+        }else{
+            like.classList.remove('heart-clicked');
+            like.classList.add('heart');
+            count.innerText = like_count - 1
+        }
+       $.ajax({
+        type: "POST",
+        headers: {'X-CSRFToken': csrftoken},
+        url: 'http://127.0.0.1:8000/post/'+pk+'/like', // set the url of the request (= localhost:8000/hr/ajax/load-cities/)
+        data: {
+          'pk': pk
+        },
+        success: function (data) {
+          
+          //console.log(data)
+        }
+      });
+    }
+    
+    var tweet = document.getElementById("post-content");
+    tweet.addEventListener('htmx:afterSwap', function(){
+        console.log("swapping")
+        toastr.success("Success added post!");
+    });
+</script>
+
+<script>
+    function copyContent() {
+        document.getElementById("hiddenTextarea").value =  
+            document.getElementById("tweet-box").innerHTML;
+        return true;
+    }
+</script>
+<script>
+    $(".post-image").click(function(){
+      $("#full-image").attr("src", $(this).attr("src"));
+      $('#image-viewer').show();
+    });
+
+    $("#image-viewer .close").click(function(){
+      $('#image-viewer').hide();
+    });
+</script>
+<script>
+    const wrapper = document.querySelector(".wrapper"),
+    editableInput = wrapper.querySelector(".editable"),
+    readonlyInput = wrapper.querySelector(".readonly"),
+    placeholder = wrapper.querySelector(".placeholder"),
+    counter = wrapper.querySelector(".counter"),
+    button = wrapper.querySelector("button");
+
+    editableInput.onfocus = ()=>{
+      placeholder.style.color = "#c5ccd3";
+    }
+    editableInput.onblur = ()=>{
+      placeholder.style.color = "#98a5b1";
+    }
+
+    editableInput.onkeyup = (e)=>{
+      let element = e.target;
+      validated(element);
+    }
+    editableInput.onkeypress = (e)=>{
+      let element = e.target;
+      validated(element);
+      placeholder.style.display = "none";
+    }
+
+    function validated(element){
+      let text;
+      let maxLength = 100;
+      let currentlength = element.innerText.length;
+
+      if(currentlength <= 0){
+        placeholder.style.display = "block";
+        counter.style.display = "none";
+        button.classList.remove("active");
+      }else{
+        placeholder.style.display = "none";
+        counter.style.display = "block";
+        button.classList.add("active");
+      }
+
+      counter.innerText = maxLength - currentlength;
+
+      if(currentlength > maxLength){
+        let overText = element.innerText.substr(maxLength); //extracting over texts
+        overText = `<span class="highlight">${overText}</span>`; //creating new span and passing over texts
+        text = element.innerText.substr(0, maxLength) + overText; //passing overText value in textTag variable
+        readonlyInput.style.zIndex = "1";
+        counter.style.color = "#e0245e";
+        button.classList.remove("active");
+      }else{
+        readonlyInput.style.zIndex = "-1";
+        counter.style.color = "#333";
+      }
+      readonlyInput.innerHTML = text; //replacing innerHTML of readonly div with textTag value
+    }
+  </script>
+
+{% endblock javascript %}
