--- a/post/templates/post/post_list.html
+++ b/post/templates/post/post_list.html
@@ -193,7 +193,7 @@
     <div id="post-content">
       {% include 'post/snippets/post_list_body.html' %}
     </div>
-
+    {% include 'post/snippets/product_list.html' %}
     <div class="d-flex d-none position-fixed" style="top:35vh;left:46vw;">
         <button class="btn btn-primary loading" style="display: none;">
             <span class="spinner-border spinner-border-sm"></span>
