--- a/marketplace/templates/marketplace/marketplace_detail.html
+++ b/marketplace/templates/marketplace/marketplace_detail.html
@@ -106,7 +106,7 @@
                     <hr>
                     <div class="mt-3">
                         <span class="fw-bold">Deskripsi</span>
-                        <p>{{product.description}}</p>  
+                        <p>{{product.description|safe}}</p>  
                     </div>
                     <div class="mt-3">
                         <span class="fw-bold">Lokasi</span>
